# PokeAPI

./: .gitignore  api_request.py  constants.py  database_creator.py  game_mechanics.py  pokemon_database.py  pokemon_library.db  pokemon_types.py  pyproject.toml  web.py
PokeAPI/: web.py
PokeAPI/templates/: pokedex.html
Temp/: pokemon_database.py
templates/: attack.html  damage_relations.html  error.html  game.html  gamesetup.html  layout.html  pokedex.html  victoryscreen.html  welcome.html
tests/: card_tests.py  test_battle.py  test_cards.py  test_evolutions.py  test_game.py
