[tool.poetry]
name = "pokeapi"
version = "0.1.0"
description = "A Pokemon API"
authors = ["Team Get Cut"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
